# NumericalModelling

./: CMakeLists.txt
Worksheet1/Exercise1/: Exercise1.tex
Worksheet1/Exercise4/: Exercise4.tex  silverRatio.cpp
Worksheet1/Exercise6/: Exercise6.cpp  findTheta.cpp
Worksheet1/Exercise7/: Exercise7.cpp  bisNewtCompare.cpp  bisection.csv  bisection1.txt  bisection2.txt  newton1.csv  newton1.txt  newton2.csv  newton2.txt
Worksheet2/Exercise1/: Exercise1.cpp
Worksheet2/Exercise2/: Exercise2.cpp  Exercise2File.txt  Exercise2Simpson.csv  Exercise2Trapezium.csv  Exercise2a.cpp
Worksheet2/Exercise6/: Exercise6.cpp
Worksheet2/Exercise7/: Exercise7.cpp
